[package]
name = "tictac"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bitflags = "2.3.3"
byteorder = "1.5.0"
bytes = "1.5.0"
digest = "0.10.7"
futures = "0.3.29"
md-5 = "0.10.6"
num_enum = "0.7.0"
thiserror = "1.0.49"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
